--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Alan AI News Application" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>News Express</title>
+    <title>News Expresss</title>
   </head>
   <body>
     <div id="root"></div>
